# OpenGL

./: CMakeLists.txt  README.md  README.txt  bostacommijo  e -i HEAD~3  run.sh
Dependencies/include/glad/: glad.h
Dependencies/include/myLib/: logcomponent.cc  logcomponent.h  shader_s.h
cmake/: FIndglad.cmake  FIndglfw3.cmake  Findkhr.cmake  findmyLib.cmake
src/: glad.c  logcomponent.cc  logcomponent.h  main.cc
src/PreviousCodes/1.getting_started/: 1.1.hello_window.cc  1.2.hello_triangle.cc  1.3.hello_rectagle.cc  1.4.exercise_1.cc  1.5.exercise_2.cc  1.5.exercise_3.cc  1.7.shaders_uniform.cc  1.8.shaders_interpolation.cc  1.9.shaders_class.cc
src/shaders/: 1.9.shader.vs  shader.fs
src/shaders/previous_shaders/: 1.10.shader_exercise1.vs  1.11.shader_exercise2.vs  1.12.shader_exercise3.fs  1.12.shader_exercise3.vs
